--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,12 +1,18 @@
 .aboutme {
     background-color: lightgreen;
-    width: 80%;
+    width: 100%;
     margin: auto;
     height: 95vh;
     
 }
 
+.aboutme-title{
+    font-size: 1.7rem;
+    
+}
+
+
 .aboutme-p{
     
-   
+   font-size: 1.3rem;
 }
