--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
+@import url("../src/asset/css/var.css");
+
+
 .App {
   width: 100vw;
   height: 100vh;
-
+  display: flex;
+  flex-direction: column;
 }
 
-.main{
+.Main{
+  height: 92vh;
+  background-color: var(--color-background-medium);
   
-  height: 100vh;
 }
 
