--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,14 +1,19 @@
+@import url("../../asset/css/var.css");
+
 .header{
-    width: 100%;
-    padding-top: 0.8rem;
-    background-color: lightcoral;
-    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 8vh;
+    background-color: var(--color-background-dark);
+    z-index: 1;
 }
 
 .header-title{
-    display: flex;
+    
     font-size: 2rem;
-    justify-content: center;
+    color: var(--color-title);
     
 }
 
@@ -17,6 +22,7 @@
     width: 3rem;
     top: 0.5rem;
     right: 0.5rem;
+    
     -webkit-animation: flip-in-diag-2-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: flip-in-diag-2-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     
@@ -27,6 +33,7 @@
     width: 2.8rem;
     top: 0.4rem;
     right: 0.6rem;
+    
     -webkit-animation: flip-in-diag-2-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: flip-in-diag-2-tl 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
