--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,11 +1,24 @@
+@import url("../../asset/css/var.css");
+
+.container-navbar{
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: 0;
+}
+
 .navbar {
-    background-color: lightblue;
-    display: flex;
-    width: 70vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    -webkit-animation: scale-up-hor-left 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+        background-color: #042326;
+        display: flex;
+        width: 70vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        -webkit-animation: scale-up-hor-left 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	        animation: scale-up-hor-left 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
@@ -20,7 +33,9 @@
 
 .navbar-navlink{
     padding: 1rem;
-    /* float: left;   */
+    color: var(--color-text);
+    font-size: 1.5rem;
+    
 }
 
 /* ----------------------------------------------
