--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -2,18 +2,34 @@
 
 .aboutme {
     background-color: var(--color-background-medium);
-    width: 100%;
-    margin: auto;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.aboutme-profile-pic{
+    margin: 2rem auto;
+    width: 13rem;
+    height: 15rem;
+    
 }
 
 .aboutme-title{
-    font-size: 1.7rem;
-    
+    font-size: 1.8rem;
+    color: var(--color-text);
+    display: flex;
+    justify-content: center;
+    text-align: center; 
+    margin: 2rem 1rem;  
 }
-
 
 .aboutme-p{
-    
-   font-size: 1.3rem;
+    color: var(--color-text);
+    font-size: 1.3rem;
+    justify-content: center;
+    text-align: center; 
+    margin: 3rem auto;  
 }
+
+
+
