--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -33,7 +33,7 @@
 
 .navbar-navlink{
     padding: 1rem;
-    color: var(--color-text);
+    color: var(--color-title);
     font-size: 1.5rem;
     
 }
