--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -15,12 +15,18 @@
 }
 
 .aboutme-title{
-    font-size: 1.8rem;
+    font-size: 2.3rem;
     color: var(--color-text);
     display: flex;
     justify-content: center;
     text-align: center; 
-    margin: 2rem 1rem;  
+    margin: 1rem;  
+}
+
+.aboutme-subtitle{
+    font-size: 1.8rem;
+    color: var(--color-text);
+    padding:2rem;
 }
 
 .aboutme-p{
@@ -28,7 +34,8 @@
     font-size: 1.3rem;
     justify-content: center;
     text-align: center; 
-    margin: 3rem auto;  
+    margin: 0.5rem auto;
+    padding: 0 1rem 0 1rem;
 }
 
 
