--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,8 +5,7 @@
     justify-content: center;
     margin: auto;
     width: 70%;
-    height: 100%;
-
+    height: 90%;
 }
 
 .contact-p{
@@ -26,3 +25,49 @@
     border-radius: 2px;
 }
 
+.contact-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    
+}
+
+.contact-container-modal{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15rem;
+    width:70%;
+    height: 30%;
+    background-color: #025951;
+    color: var(--color-title);
+    padding: 2rem;
+    font-size: large;
+    border: 2px solid var(--color-text);
+    font-size: 1.3rem;
+}
+
+.contact-modal-error{
+    margin-bottom: 2rem;
+    text-align: center;
+     
+}
+
+.contact-modal-success{
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.contact-button{
+    color: var(--color-title);
+    background-color: #04BF9D;
+    border: 2px solid var(--color-text);
+    font-size: large;
+}
