--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,42 +1,40 @@
-@import url("../../asset/css/var.css");
+@import url('../../asset/css/var.css');
 
 .aboutme {
-    background-color: var(--color-background-medium);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.aboutme-profile-pic{
-    margin: 2rem auto;
-    width: 13rem;
-    height: 15rem;
-    
+	background-color: var(--color-background-medium);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-.aboutme-title{
-    font-size: 2.3rem;
-    color: var(--color-text);
-    display: flex;
-    justify-content: center;
-    text-align: center; 
-    margin: 1rem;  
+.aboutme-profile-pic {
+	margin-top: 5rem;
+	margin-bottom: 2rem;
+	width: 13rem;
+	height: 15rem;
 }
 
-.aboutme-subtitle{
-    font-size: 1.8rem;
-    color: var(--color-text);
-    padding:2rem;
+.aboutme-title {
+	font-size: 2.3rem;
+	color: var(--color-text);
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	margin: 1rem;
 }
 
-.aboutme-p{
-    color: var(--color-title);
-    font-size: 1.3rem;
-    justify-content: center;
-    text-align: center; 
-    margin: 0.5rem auto;
-    padding: 0 1rem 0 1rem;
+.aboutme-subtitle {
+	font-size: 1.8rem;
+	color: var(--color-text);
+	padding: 2rem;
 }
 
-
-
+.aboutme-p {
+	color: var(--color-title);
+	font-size: 1.3rem;
+	justify-content: center;
+	text-align: center;
+	margin: 0.5rem auto;
+	padding: 0 1rem 0 1rem;
+}
