--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,42 +1,35 @@
-@import url("../../asset/css/var.css");
+@import url('../../asset/css/var.css');
 
-.container-navbar{
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.3);
-        z-index: 0;
+.container-navbar {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.3);
+	z-index: 0;
 }
 
 .navbar {
-        background-color: #042326;
-        display: flex;
-        width: 70vw;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 2;    
-        transition: transform 250ms ease-in-out;
-
+	background-color: #042326;
+	display: flex;
+	width: 70vw;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2;
 }
 
-.navbar-items {  
-    height: 100vh;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
+.navbar-items {
+	height: 100vh;
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.navbar-navlink{
-    padding: 1rem;
-    color: var(--color-title);
-    font-size: 1.5rem;
-    
+.navbar-navlink {
+	padding: 1rem;
+	color: var(--color-title);
+	font-size: 1.5rem;
 }
-
-
-  
