--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -38,3 +38,20 @@
 	margin: 0.5rem auto;
 	padding: 0 1rem 0 1rem;
 }
+
+@media screen and (min-width: 768px) {
+	.aboutme {
+		width: 100%;
+		padding: 2rem;
+	}
+
+	.aboutme-title {
+		font-size: 3rem;
+	}
+	.aboutme-subtitle {
+		font-size: 2.5rem;
+	}
+	.aboutme-p {
+		font-size: 2rem;
+	}
+} ;
