--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -68,3 +68,18 @@
 	border: 2px solid var(--color-text);
 	font-size: large;
 }
+
+@media screen and (min-width: 768px) {
+	.contact-form {
+		gap: 0.2rem;
+	}
+
+	.contact-p {
+		font-size: 2rem;
+		padding-top: 2rem;
+	}
+
+	.contact-button {
+		font-size: 1.7rem;
+	}
+}
