--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -11,6 +11,56 @@
 	position: fixed;
 }
 
+/* CSS pour le toggle boutton  pour changer de langue */
+
+input[type='checkbox'] {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+label {
+	cursor: pointer;
+	width: 4rem;
+	height: 2rem;
+	background: grey;
+	display: block;
+	border-radius: 100px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	margin: 1rem;
+}
+
+label:after {
+	content: 'FR';
+	position: absolute;
+	top: 1px;
+	left: 5px;
+	width: 2rem;
+	height: 1.8rem;
+	background: #fff;
+	border-radius: 90px;
+	transition: 0.3s;
+	font-size: 1.3rem;
+	text-align: center;
+}
+
+input:checked + label {
+	background: #bada55;
+}
+
+input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+	content: 'ENG';
+}
+
+label:active:after {
+	width: 2rem;
+	content: 'ENG';
+}
+
 .header-title {
 	font-size: 2rem;
 	color: var(--color-title);
@@ -74,5 +124,11 @@
 		-webkit-transform: rotate3d(1, 1, 0, 0deg);
 		transform: rotate3d(1, 1, 0, 0deg);
 		opacity: 1;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.header-menuburger-open {
+		display: none;
 	}
 }
