--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -33,3 +33,9 @@
 	color: var(--color-title);
 	font-size: 1.5rem;
 }
+
+@media screen and (min-width: 1024px) {
+	.navbar-navlink {
+		display: contents;
+	}
+}
