--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -30,6 +30,7 @@ label {
 	top: 0;
 	left: 0;
 	margin: 1rem;
+	background-color: var(--color-text);
 }
 
 label:after {
@@ -134,6 +135,9 @@ label:active:after {
 
 @media screen and (min-width: 1024px) {
 	.header-menuburger-open {
+		display: none;
+	}
+	.header-menuburger-close {
 		display: none;
 	}
 }
