--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -40,10 +40,19 @@
 
 @media screen and (min-width: 1024px) {
 	.navbar {
+		width: 30%;
 	}
 	.container-navbar {
 		position: absolute;
-		top: 8vh;
-		background-color: red;
+
+		width: 30%;
+	}
+
+	.navbar-items {
+		height: 100vh;
+		padding: 1rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 	}
 }
