ajout d'un projet et modification du CV en anglais

--- a/src/Components/CV/CV.css
+++ b/src/Components/CV/CV.css
@@ -8,6 +8,13 @@
 	flex-direction: column;
 }
 
+.cv-img-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
 .cv {
 	display: flex;
 	flex-direction: column;
